# klapklap

./: .gitignore  CMakeLists.txt  README.md  pds-project.files  pds-project.includes  pds_project.files
client/src/: CMakeLists.txt  client.pro  client.pro.user.3e14d19  client.qrc  klapklap.icns  main.cpp
client/src/assets/: client.qrc  klapklap.icns
client/src/assets/icon_set/font/: Flaticon.eot  _flaticon.scss  flaticon.css  flaticon.html
client/src/assets/icon_set/license/: license.html
client/src/assets/images/: logo.jp2
client/src/assets/styles/: access-dialog.qss  styles.qss
client/src/classes/: mainwindow.cpp  mainwindow.h
client/src/classes/access/: accessdialog.cpp  accessdialog.h
client/src/classes/auth_service/: auth.cpp  auth.h
client/src/classes/chat/: chat_client.cpp  chat_client.h  chatdialog.cpp  chatdialog.h  kk_chat.cpp  kk_chat.h
client/src/classes/client/: KKClient.cpp  KKClient.h  kk_client.cpp  kk_client.cpp.autosave  kk_client.cpp.orig  kk_client.h  kk_client.h.autosave
client/src/classes/login/: login.cpp  login.h
client/src/classes/message/: chat_message.h
client/src/classes/modal/: kk_modal.cpp  kk_modal.h  modaldialog.cpp  modaldialog.h
client/src/classes/openfile/: chooseavatardialog.cpp  chooseavatardialog.h  openfiledialog.cpp  openfiledialog.h  sharefiledialog.cpp  sharefiledialog.h
client/src/classes/textedit/: kk_cursor.h  kk_editor.cpp  kk_editor.h  kk_textedit.cpp  kk_textedit.h  textedit.cpp  textedit.cpp.autosave  textedit.h
client/src/classes/view/: mainwindow.cpp  mainwindow.h
client/src/ui/: accessdialog.ui  chatdialog.ui  chooseavatardialog.ui  loginwindow.ui  mainwindow.ui  modaldialog.ui  openfiledialog.ui  sharefiledialog.ui
libs/: CMakeLists.txt  kklib.pro
libs/src/: CMakeLists.txt  classes_include.h  kklibexport.h  kkmime.h
libs/src/classes/chat/message/: chat_message.cpp  chat_message.h
libs/src/classes/connection_handler/: con_handler.cpp  con_handler.h
libs/src/classes/crdt/: crdt.cpp  crdt.h  kk_crdt.cpp  kk_crdt.h  kk_crdt.h.autosave
libs/src/classes/crdt/char/: kk_char.cpp  kk_char.cpp.autosave  kk_char.h  kk_char.h.autosave
libs/src/classes/crdt/crdt_char/: Char.cpp  Char.h
libs/src/classes/crdt/crdt_identifier/: identifier.cpp  identifier.h
libs/src/classes/crdt/identifier/: kk_identifier.cpp  kk_identifier.h
libs/src/classes/crdt/pos/: kk_pos.cpp  kk_pos.h
libs/src/classes/crypt/: kk_crypt.cpp  kk_crypt.h
libs/src/classes/crypto/: crypto.cpp  crypto.h
libs/src/classes/logger/: kk_logger.cpp  kk_logger.h
libs/src/classes/message/: message.cpp  message.h
libs/src/classes/payload/: kk_payload.cpp  kk_payload.h
libs/src/classes/task/: kk_task.cpp  kk_task.h
libs/src/classes/user/: kk_user.cpp
libs/src/classes/utilities/: kk_utility.cpp  kk_utility.h
libs/src/constants/: kk_constants.h  kk_constants.h.autosave
server/src/: CMakeLists.txt  conanfile.txt  klapklap.icns  main.cpp  main.cpp.autosave  server.pro  server.pro.user.3e14d19
server/src/PDS_PRG_SERVER/PDS_PRG_SERVER/: main.cpp
server/src/PDS_PRG_SERVER/PDS_PRG_SERVER.xcodeproj/: project.pbxproj
server/src/PDS_PRG_SERVER/PDS_PRG_SERVER.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
server/src/Server/Server/: main.cpp
server/src/Server/Server.xcodeproj/: project.pbxproj
server/src/certificates/: dh512.pem  server.crt  server.csr  server.key
server/src/classes/: classes_include.h
server/src/classes/QSMTP_service/: QSMTP_service.cpp  QSMTP_service.h
server/src/classes/SMTP_client/: SMTP_client.cpp  SMTP_client.h
server/src/classes/chat/: chat_server.cpp  chat_server.h
server/src/classes/chat/partecipant/: chat_partecipant.cpp  chat_partecipant.h
server/src/classes/chat/room/: chat_room.cpp  chat_room.h
server/src/classes/chat/session/: chat_session.cpp  chat_session.h
server/src/classes/connection_handler/: con_handler.cpp  con_handler.h
server/src/classes/crdt/: crdt_server.cpp  crdt_server.h
server/src/classes/crdt/file/: crdt_file.cpp  crdt_file.h
server/src/classes/crdt/partecipant/: crdt_partecipant.cpp  crdt_partecipant.h
server/src/classes/crdt/room/: crdt_room.cpp  crdt_room.h
server/src/classes/crdt/session/: crdt_session.cpp  crdt_session.h
server/src/classes/crdt_rc/: CRDT_Char.cpp  CRDT_Char.h  CRDT_Crdt.cpp  CRDT_Crdt.h  CRDT_identifier.cpp  CRDT_identifier.h  CRDT_main.cpp  CRDT_pos.cpp  CRDT_pos.h
server/src/classes/crdt_tmp/: CRDT_Char.cpp  CRDT_Char.h  CRDT_Crdt.cpp  CRDT_Crdt.h  CRDT_Identifier.cpp  CRDT_Identifier.h  CRDT_main.cpp  CRDT_pos.h  empty.c
server/src/classes/db/: kk_db.cpp  kk_db.cpp.autosave  kk_db.h
server/src/classes/db_connector/: db_connector.cpp  db_connector.h  db_crypto.cpp  db_crypto.h
server/src/classes/db_interface/: db_interface.cpp  db_interface.h
server/src/classes/db_interface/HTTP_listener/: HTTP_listener.cpp  HTTP_listener.h
server/src/classes/db_interface/HTTP_session/: HTTP_session.cpp  HTTP_session.h
server/src/classes/message/: chat_message.h
server/src/classes/q_crypt/: simplecrypt.cpp  simplecrypt.h
server/src/classes/server/: kk_server.cpp  kk_server.h  server.cpp  server.h
server/src/classes/server/file/: kk_file.cpp  kk_file.h
server/src/classes/server/filesys/: kk_filesys.cpp  kk_filesys.cpp.orig  kk_filesys.h
server/src/classes/server/partecipant/: kk_partecipant.cpp  kk_partecipant.h
server/src/classes/server/participant/: kk_participant.cpp  kk_participant.h
server/src/classes/server/room/: kk_room.cpp  kk_room.h
server/src/classes/server/session/: kk_session.cpp  kk_session.cpp.autosave  kk_session.cpp.orig  kk_session.h
server/src/classes/server/task/: kk_task.cpp  kk_task.h
server/src/classes/smtp/: kk_smtp.cpp  kk_smtp.h
server/src/classes/smtp/mime/: SmtpMime.h  emailaddress.cpp  emailaddress.h  mimecontentformatter.cpp  mimecontentformatter.h  mimehtml.cpp  mimehtml.h  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimemultipart.h  mimepart.cpp  (+7 more)
server/src/classes/user/: kk_user.cpp  kk_user.h
server/src/classes/utilities/: Utility.cpp  Utility.h
(+20 files in other folders)
